add more C* 3.11 properties and add C* 4.0 properties